<resources>
    <string name="app_name">Vanesa</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Full name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="action_register">"Register"</string>

    <string name="not_registered">Not a member? Register Now</string>
    <string name="already_registered">Already registered? Sign in</string>

    <string name="nav_header_default_text">Sign in | Join for free</string>
    
    <!--Paypal-->
    <string name="paypal_clientID">AR5n0W81LZsNgZ8IpvJbqt8IH8c1Kos1pqJ4RSdrL_ViVNnnuDMNWtuw4mcnlx2YXOge4oW9py9NvLoU</string>
    <string name="paypal_Secret">EDVOnJiC18uPY3VGO2nO7mvJK86mXj05Kojs_BmS8tZZtaaTuXyS_vv4g1liSksQ97cqkGq4wanVGipq</string>
</resources>
