<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/register_theme"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_register_fullname"
            android:background="@color/white"
            android:hint="@string/prompt_name"
            android:padding="10dip"
            android:inputType="text"
            android:layout_marginBottom="20dp"
            android:maxLines="1"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_register_email"
            android:background="@color/white"
            android:hint="@string/prompt_email"
            android:padding="10dip"
            android:inputType="text"
            android:layout_marginBottom="20dp"
            android:maxLines="1"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_register_password"
            android:background="@color/white"
            android:hint="@string/prompt_password"
            android:padding="10dip"
            android:inputType="textPassword"
            android:layout_marginBottom="20dp"
            android:maxLines="1"
            />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register"
            android:background="@color/register_theme_secondary"
            android:layout_marginTop="20dip"/>
        <Button
            android:id="@+id/button_register_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_registered"
            android:background="@null"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="40sp"/>





    </LinearLayout>




</LinearLayout>